--- a/frontend/src/anki.css
+++ b/frontend/src/anki.css
@@ -12,11 +12,13 @@
     grid-area: cabecalho;
     background: #363636;
     color: white;
+    text-align: center; 
 }
 
 #page > main {
     grid-area: conteudo;
     background: gray;
+    color: black;
 }
 
 #page > footer {
@@ -28,6 +30,35 @@
 .decks {
     background: white;
     margin-top: 20px;
-    height: 8vh;
+    height: 8vh;  
+    width: 60%; 
+    padding: 2px; 
+}
 
+.decksAdd {
+    background: white;
+    margin-top: 20px;
+    height: 15vh;  
+    width: 60%;   
+    padding: 5px;
+}
+
+.decksAdd > input {
+    margin-top: 8px;
+    margin-left: 10px;
+}
+
+.decksAdd > div {
+    margin-top: 5px;
+    margin-left: 10px;
+    margin-bottom: 2px;
+}
+
+.botao {
+    float: right;
+
+}
+
+.btn {
+    margin: 5px;
 }
