--- a/frontend/src/anki.css
+++ b/frontend/src/anki.css
@@ -10,17 +10,6 @@
       
 }
 
-@media (max-wdth: 700px){
-    #page {
-        grid-template-columns: 1fr;
-        grid-template-rows: 40px 40px 1fr ;
-        grid-template-areas:'cabecalho' 
-                            'navegacao'
-                             'conteudo';
-    }
-    footer { display: none; }
-}
-
 #page > header { 
     grid-area: cabecalho;
     background: #363636;
@@ -36,6 +25,18 @@
 
 #page > nav {
     grid-area: navegacao;
+    background: gray;
+}
+
+nav > a {
+    color: white;
+    margin-bottom: 1px;
+    background: #363636;
+}
+
+nav > a:hover {
+    color: black;
+    background: gray;
 }
 
 #page > footer {
@@ -46,26 +47,20 @@
 }
 
 .decks {
-    background: white;
+    background: #FFFAFA;
     margin-top: 20px;
     height: 8vh;  
-    width: 60%; 
+    width: 80%; 
     padding: 2px; 
 }
 
 .decksAdd {
-    background: white;
+    background: #FFFAFA;
     margin-top: 20px;
-    height: 15vh;  
-    width: 60%;   
+    height: 26vh;  
+    width: 80%;   
     padding: 5px;
 }
-
-.decksAdd > input {
-    margin-top: 8px;
-    margin-left: 10px;
-}
-
 .decksAdd > div {
     margin-top: 5px;
     margin-left: 10px;
@@ -79,5 +74,6 @@
 
 .btn {
     margin: 5px;
+
 }
 
